fix(#262): icon alignment fixed (#268)

--- a/src/components/messenger-page/chat-info-right-panel/chat-media/chat-media.scss
+++ b/src/components/messenger-page/chat-info-right-panel/chat-media/chat-media.scss
@@ -23,6 +23,7 @@
     display: flex;
     flex-direction: row;
     position: sticky;
+    align-items: center;
     top: 0;
     z-index: 15;
 
